--- a/backend/similarity_search.ipynb
+++ b/backend/similarity_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,12 +24,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- get models"
+    "## Lấy ra các pretrain models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,12 +50,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- methods to compute cosine similarity"
+    "## Các cách tính toán độ giống nhau"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- FAISS "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,8 +86,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- KDTree"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,8 +109,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Công thức cosine sim bình thường"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cosine_similarity(a, b):\n",
+    "    dot_product = np.dot(a, b)\n",
+    "    norm_a = np.linalg.norm(a)\n",
+    "    norm_b = np.linalg.norm(b)\n",
+    "    similarity = dot_product / (norm_a * norm_b)\n",
+    "    return similarity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dữ liệu"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Đọc dữ liệu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +509,7 @@
        "[2149378 rows x 17 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,8 +520,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tiền xử lý"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Lấy ra các trường liên tục"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +825,7 @@
        "[2149378 rows x 13 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,8 +836,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Lấy ra các labels"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +864,7 @@
        "Name: label, Length: 2149378, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,8 +875,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Drop một số trường phân loại đi"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1124,7 @@
        "[2149378 rows x 10 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1073,13 +1150,61 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "continuous_data.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Scale dữ liệu về phân bố chuẩn và áp dụng PCA về còn 3 chiều (Để giúp cho việc trực quan, cluster và tính toán dễ dàng, nhanh hơn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-2.19658248e+00, -1.29361192e+00, -8.87683980e-01],\n",
+       "       [-2.63215089e+00, -6.70602015e-01, -3.01267420e-01],\n",
+       "       [-1.59941039e+00, -8.51452029e-01,  1.53082773e-02],\n",
+       "       ...,\n",
+       "       [ 4.54106112e+00,  1.32775440e-01,  9.52485594e-03],\n",
+       "       [ 4.75713131e+00,  6.57297456e-04,  7.25920036e-02],\n",
+       "       [ 5.36735658e+00,  1.08679701e+00,  3.64164611e-03]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "processed_train = pca.transform(scaler.transform(continuous_data))\n",
+    "processed_train"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test đầu vào"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Chuẩn bị dữ liệu input"
    ]
   },
   {
@@ -1106,24 +1231,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'to_numpy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43minput_vector\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_numpy\u001b[49m()\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'to_numpy'"
-     ]
-    }
-   ],
    "source": [
-    "input_vector.to_numpy()\n"
+    "- Scale dữ liệu input về phân bố chuẩn và áp dụng PCA về 3 chiều"
    ]
   },
   {
@@ -1156,35 +1267,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-2.19658248e+00, -1.29361192e+00, -8.87683980e-01],\n",
-       "       [-2.63215089e+00, -6.70602015e-01, -3.01267420e-01],\n",
-       "       [-1.59941039e+00, -8.51452029e-01,  1.53082773e-02],\n",
-       "       ...,\n",
-       "       [ 4.54106112e+00,  1.32775440e-01,  9.52485594e-03],\n",
-       "       [ 4.75713131e+00,  6.57297456e-04,  7.25920036e-02],\n",
-       "       [ 5.36735658e+00,  1.08679701e+00,  3.64164611e-03]])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "processed_train = pca.transform(scaler.transform(continuous_data))\n",
-    "processed_train"
+    "- Sử dụng model k mean dự đoán label của bài input"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1193,7 +1284,7 @@
        "array([20])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1204,8 +1295,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Để giảm thiểu thời gian chạy của thuật toán cosine similarity thì việc clustering là rất cần thiết <br/>\n",
+    "=> Lấy ra tất cả các bài có cùng label với bài input"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1315,7 @@
        "       '61OLOsYMI9PuUftr0muz28', '18o37lczunBF67BRPMBO64'], dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1228,8 +1327,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## So sánh kết quả"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1240,8 +1346,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Kết quả sử dụng công thức cosine similarity bình thường"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Kết quả chạy"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1252,13 +1372,74 @@
        " array([   0, 5296, 4451, ..., 4481, 4800,  258], dtype=int64))"
       ]
      },
-     "execution_count": 18,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "np.sort(dist3), indx3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Thời gian chạy khi ko sử dụng K mean để phân cụm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24.6 ms ± 1.02 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit cdist([temp], processed_train, metric=\"cosine\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Thời gian chạy sử dụng K mean để phân cụm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "86.6 µs ± 1.12 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit cdist([temp], group, metric=\"cosine\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Kết quả sử dụng FAISS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Kết quả chạy"
    ]
   },
   {
@@ -1286,25 +1467,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "dupp_idx = np.where(dist2[0] == 0)[0]\n",
-    "# np.delete(indx2, dupp_idx)\n",
-    "len(dupp_idx)"
+    "- Thời gian chạy khi ko sử dụng K mean để phân cụm"
    ]
   },
   {
@@ -1313,22 +1479,22 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(array([[4.96506831e-16, 7.54969014e-02, 1.23872195e-01, 1.26247465e-01,\n",
-       "         1.85891678e-01, 1.92433024e-01, 1.93077785e-01, 2.10776505e-01,\n",
-       "         2.14657470e-01, 2.15115551e-01]]),\n",
-       " array([[    0,  6110, 15426,  4329, 14951,  3929, 13059,  9072, 12301,\n",
-       "          3768]], dtype=int64))"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "126 ms ± 1.54 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
     }
    ],
    "source": [
-    "dist, indx"
+    "%timeit get_closest(temp, processed_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Thời gian chạy khi sử dụng K mean để phân cụm"
    ]
   },
   {
@@ -1337,35 +1503,29 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['0hkxAENNrJ18AzHqync5n3',\n",
-       " '2A4VSrlyxKSLE6sz4oSii5',\n",
-       " '72bmGa4xcDlLnG6ny8hMRA',\n",
-       " '0tRJ8UJpCqKlOFIbBRLPpT',\n",
-       " '5oQMPqDpxtkBDu5Wz6MCJf',\n",
-       " '1OomzK70cwJEOUzzkhUyFe',\n",
-       " '3tWEovNfTgb1BiQuJKAOZY',\n",
-       " '6irlrFwCXjTemNtsWH9vFl',\n",
-       " '03IK43DIcrdD5z13OqHkj2',\n",
-       " '5CCqKsYBlnkXVET3OMccJf']"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "484 µs ± 7.44 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
     }
    ],
    "source": [
-    "# indx.flatten()[np.argmin(dist)]\n",
-    "rcm_ID = []\n",
-    "for i in range(len(dist.flatten())):\n",
-    "    # if (input_id == group_ID[indx.flatten()[i]]):\n",
-    "    #     print(f\"Dupp: {group_ID[indx.flatten()[i]]}\")\n",
-    "    #     continue\n",
-    "    rcm_ID.append(group_ID[indx.flatten()[i]])\n",
-    "\n",
-    "rcm_ID\n"
+    "%timeit get_closest(temp, group)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lấy ra các ID từ kết quả chạy được"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- FAISS"
    ]
   },
   {
@@ -1405,6 +1565,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Công thức cosine similarity"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -1435,27 +1602,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## So sánh feature của input và kết quả recommend"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- input"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "audio_feats_danceability             0.66400\n",
-       "audio_feats_energy                   0.75900\n",
-       "audio_feats_loudness                -6.58300\n",
-       "audio_feats_speechiness              0.20900\n",
-       "audio_feats_acousticness             0.00238\n",
-       "audio_feats_instrumentalness         0.00000\n",
-       "audio_feats_liveness                 0.05980\n",
-       "audio_feats_valence                  0.70100\n",
-       "audio_feats_tempo                   99.25200\n",
-       "audio_feats_duration_ms         235933.00000\n",
-       "Name: 2, dtype: float64"
+       "[0.689, 0.268, -15.722, 0.505, 0.923, 1.69e-06, 0.31, 0.569, 121.202, 91063.0]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1465,107 +1636,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 36,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "audio_feats_danceability             0.8290\n",
-       "audio_feats_energy                   0.7310\n",
-       "audio_feats_loudness                -5.5010\n",
-       "audio_feats_speechiness              0.1070\n",
-       "audio_feats_acousticness             0.0677\n",
-       "audio_feats_instrumentalness         0.0131\n",
-       "audio_feats_liveness                 0.2210\n",
-       "audio_feats_valence                  0.5140\n",
-       "audio_feats_tempo                   98.0150\n",
-       "audio_feats_duration_ms         159413.0000\n",
-       "Name: 1800074, dtype: float64"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "continuous_data.iloc[1800074]"
+    "- recommend"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ID                                     0XqMRvTvRg9Saor8EgvxMu\n",
-       "artist_name                                            Fergie\n",
-       "track_name                      M.I.L.F. $ - Nick Talos Remix\n",
-       "audio_feats_danceability                                0.829\n",
-       "audio_feats_energy                                      0.731\n",
-       "audio_feats_key                                           0.0\n",
-       "audio_feats_loudness                                   -5.501\n",
-       "audio_feats_mode                                          1.0\n",
-       "audio_feats_speechiness                                 0.107\n",
-       "audio_feats_acousticness                               0.0677\n",
-       "audio_feats_instrumentalness                           0.0131\n",
-       "audio_feats_liveness                                    0.221\n",
-       "audio_feats_valence                                     0.514\n",
-       "audio_feats_tempo                                      98.015\n",
-       "audio_feats_duration_ms                              159413.0\n",
-       "audio_feats_time_signature                                4.0\n",
-       "label                                                      24\n",
-       "Name: 1800074, dtype: object"
+       "array([[ 6.89000e-01,  2.68000e-01, -1.57220e+01,  5.05000e-01,\n",
+       "         9.23000e-01,  1.69000e-06,  3.10000e-01,  5.69000e-01,\n",
+       "         1.21202e+02,  9.10630e+04]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.iloc[1800074]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ID                              0WqIKmW4BTrj3eJFmnCKMv\n",
-       "artist_name                                    Beyoncé\n",
-       "track_name                               Crazy In Love\n",
-       "audio_feats_danceability                         0.664\n",
-       "audio_feats_energy                               0.759\n",
-       "audio_feats_key                                    2.0\n",
-       "audio_feats_loudness                            -6.583\n",
-       "audio_feats_mode                                   0.0\n",
-       "audio_feats_speechiness                          0.209\n",
-       "audio_feats_acousticness                       0.00238\n",
-       "audio_feats_instrumentalness                       0.0\n",
-       "audio_feats_liveness                            0.0598\n",
-       "audio_feats_valence                              0.701\n",
-       "audio_feats_tempo                               99.252\n",
-       "audio_feats_duration_ms                       235933.0\n",
-       "audio_feats_time_signature                         4.0\n",
-       "label                                               24\n",
-       "Name: 2, dtype: object"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.iloc[2]"
+    "continuous_data[df[\"ID\"] == \"0hkxAENNrJ18AzHqync5n3\"].to_numpy()"
    ]
   }
  ],
