add run scripts

--- a/backend/similarity_search.ipynb
+++ b/backend/similarity_search.ipynb
@@ -1523,6 +1523,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Thời gian chạy khi ko sử dụng K mean để phân cụm"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -1537,6 +1544,13 @@
    ],
    "source": [
     "%timeit cosine_similarity(processed_train, temp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Thời gian chạy khi sử dụng K mean để phân cụm"
    ]
   },
   {
